BYO work: Changed form to be placeholder, insetad of prefilled

--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -17,11 +17,11 @@
             <table>
                 <tr>
                     <td><label for="name">Name:</label></td>
-                    <td><input type="text" id="name" name="name" value="Your Name" required></td>
+                    <td><input type="text" id="name" name="name" placeholder="Your Name" required></td>
                 </tr>
                 <tr>
                     <td><label for="mascot">Mascot:</label></td>
-                    <td><input type="text" id="mascot" name="mascot" value="Your Mascot" required></td>
+                    <td><input type="text" id="mascot" name="mascot" placeholder="Your Mascot" required></td>
                 </tr>
                 <tr>
                     <td><label for="image">Image (PNG or JPG):</label></td>
@@ -29,44 +29,43 @@
                 </tr>
                 <tr>
                     <td><label for="imageCaption">Image Caption:</label></td>
-                    <td><input type="text" id="imageCaption" name="imageCaption" value="Your Image Caption" required></td>
+                    <td><input type="text" id="imageCaption" name="imageCaption" placeholder="Your Image Caption" required></td>
                 </tr>
                 <tr>
                     <td><label for="personalBackground">Personal Background:</label></td>
-                    <td><textarea id="personalBackground" name="personalBackground" required>Your Personal Background</textarea></td>
+                    <td><textarea id="personalBackground" name="personalBackground" placeholder="Your Personal Background" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="professionalBackground">Professional Background:</label></td>
-                    <td><textarea id="professionalBackground" name="professionalBackground" required>Your Professional Background</textarea></td>
+                    <td><textarea id="professionalBackground" name="professionalBackground" placeholder="Your Professional Background" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="academicBackground">Academic Background:</label></td>
-                    <td><textarea id="academicBackground" name="academicBackground" required>Your Academic Background</textarea></td>
+                    <td><textarea id="academicBackground" name="academicBackground" placeholder="Your Academic Background" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="webDevBackground">Background in Web Development:</label></td>
-                    <td><textarea id="webDevBackground" name="webDevBackground" required>Your Web Development Background</textarea></td>
+                    <td><textarea id="webDevBackground" name="webDevBackground" placeholder="Your Web Development Background" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="computerPlatform">Primary Computer Platform:</label></td>
-                    <td><input type="text" id="computerPlatform" name="computerPlatform" value="Your Computer Platform" required></td>
+                    <td><input type="text" id="computerPlatform" name="computerPlatform" placeholder="Your Computer Platform" required></td>
                 </tr>
                 <tr>
                     <td><label>Courses currently taking:</label></td>
                     <td>
                         <div id="courses">
-                            <input type="text" name="course[]">
-                            <button type="button" onclick="addCourse()">Add Course</button>
+                            <input type="text" name="course[]" placeholder="Course Name"><button type="button" onclick="addCourse()">Add Course</button>
                         </div>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="funnyThing">Funny Thing?</label></td>
-                    <td><textarea id="funnyThing" name="funnyThing">Your Funny Thing</textarea></td>
+                    <td><textarea id="funnyThing" name="funnyThing" placeholder="Your Funny Thing"></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="anythingElse">Anything else?</label></td>
-                    <td><textarea id="anythingElse" name="anythingElse">Anything else</textarea></td>
+                    <td><textarea id="anythingElse" name="anythingElse" placeholder="Anything else"></textarea></td>
                 </tr>
                 <tr>
                     <td></td>
