Design firm: Re-added image SRCs

--- a/itis3135/proud-cobra.com/index.html
+++ b/itis3135/proud-cobra.com/index.html
@@ -126,17 +126,17 @@
             <li>Performance Optimization</li>
         </ul>
         <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Call Us">
+            <img src="images/call.jpg" alt="Call Us">
             <h3>Call Us</h3>
             <p>Initiate your project with a call to discuss your needs.</p>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Consult with Us">
+            <img src="images/consult.jpg" alt="Consult with Us">
             <h3>Consult with Us</h3>
             <p>Meet our experts for in-depth analysis and planning.</p>
         </div>
         <div class="card">
-            <img src="https://via.placeholder.com/150" alt="Commit to a Plan">
+            <img src="images/commit.jpg" alt="Commit to a Plan">
             <h3>Commit to a Plan</h3>
             <p>Finalize your project scope and get started.</p>
         </div>
