Design Firm: Debugging

--- a/itis3135/proud-cobra.com/index.html
+++ b/itis3135/proud-cobra.com/index.html
@@ -67,8 +67,8 @@
             padding: 15px;
             border-radius: 5px;
             margin-top: 20px;
-            width: calc(100% - 30px);  /* Adjusted width to account for padding */
-            box-sizing: border-box; /* Include padding in width */
+            width: 100%;
+            box-sizing: border-box;
         }
 
         footer {
