Tables: HTML error

--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -118,7 +118,10 @@
                         <th rowspan="2">Monthly Salary</th>
                     </tr>
                     <tr>
-
+                       <th scope="col"></th>
+                       <th scope="col"></th>
+                       <th scope="col"></th>
+                       <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
