Design Firm: Debugging

--- a/itis3135/proud-cobra.com/index.html
+++ b/itis3135/proud-cobra.com/index.html
@@ -39,23 +39,23 @@
             background-color: #f2e5bc;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            display: flex; /* Added for card layout */
-            flex-wrap: wrap;  /* Added for card layout */
-            justify-content: space-around; /* Added for card layout */
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
         }
 
         h2 {
             color: #855723;
             margin-bottom: 20px;
-            width: 100%; /* Ensure h2 spans the full width */
+            width: 100%;
             text-align: center;
         }
 
         ul {
             list-style-type: square;
             padding-left: 20px;
-            width: 100%; /* Ensure ul spans the full width if needed */
-            box-sizing: border-box; /* Include padding in width */
+            width: 100%;
+            box-sizing: border-box;
         }
 
         ul li {
@@ -85,22 +85,22 @@
             margin: 5px 0;
         }
 
-        /* Styles for the cards */
         .card {
             background-color: #FFFFFF;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             margin: 10px;
             width: calc(30% - 40px); /* Adjust width to account for margin and padding */
-            box-sizing: border-box; /* Include padding and border in width */
+            box-sizing: border-box;
             text-align: center;
             min-width: 200px; /* Add a minimum width if needed */
         }
-        .card img{
-          max-width: 100%;
-          height: auto;
-          border-radius: 8px;
+
+        .card img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
         }
 
     </style>
