--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -28,7 +28,7 @@
                 <strong>Email:</strong> gomez_med8@yahoo.com<br>
                 <strong>Years of Service:</strong> 3
             </li>
-            <li>
+             <li>
                 <strong>Name:</strong> John Smith<br>
                 <strong>Email:</strong> johnsmith@company.com<br>
                 <strong>Years of Service:</strong> 10
@@ -77,7 +77,7 @@
                 <td>gomez_med8@yahoo.com</td>
                 <td>3</td>
             </tr>
-             <tr>
+            <tr>
                 <td>John Smith</td>
                 <td>johnsmith@company.com</td>
                 <td>10</td>
@@ -92,12 +92,12 @@
                 <td>peterjones@company.com</td>
                 <td>20</td>
             </tr>
-             <tr>
+            <tr>
                 <td>Mary Brown</td>
                 <td>marybrown@company.com</td>
                 <td>2</td>
             </tr>
-            <tr>
+             <tr>
                 <td>David Wilson</td>
                 <td>davidwilson@company.com</td>
                 <td>15</td>
@@ -115,6 +115,13 @@
                         <th rowspan="2">Email</th>
                         <th rowspan="2">Years of Service</th>
                         <th rowspan="2">Monthly Salary</th>
+                    </tr>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -176,7 +183,7 @@
                     <tr>
                         <th colspan="3">Total Years of Service</th>
                         <td>87</td>
-                        <td>$110,500</td>
+                        <td>$110,000</td>
                     </tr>
                 </tfoot>
             </table>
