--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -181,7 +181,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <th colspan="3">Total Years of Service</th>
+                        <td colspan="3">Total Years of Service</td>
                         <td>87</td>
                         <td>$110,000</td>
                     </tr>
