--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -117,11 +117,11 @@
                         <th rowspan="2">Monthly Salary</th>
                     </tr>
                     <tr>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
-                        <th scope="col"></th>
+                        <td scope="col"></td>
+                        <td scope="col"></td>
+                        <td scope="col"></td>
+                        <td scope="col"></td>
+                        <td scope="col"></td>
                     </tr>
                 </thead>
                 <tbody>
