Design Firm: Debugging

--- a/itis3135/proud-cobra.com/index.html
+++ b/itis3135/proud-cobra.com/index.html
@@ -76,9 +76,10 @@
             color: #fbf1c7;
             text-align: center;
             padding: 10px;
-            position: relative; /* Changed from fixed to relative */
+            position: relative;
             bottom: 0;
             width: 100%;
+            box-sizing: border-box; /* Added box-sizing */
         }
 
         footer p {
