--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -117,11 +117,11 @@
                         <th rowspan="2">Monthly Salary</th>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -181,7 +181,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="3">Total Years of Service</td>
+                        <th colspan="3">Total Years of Service</th>
                         <td>87</td>
                         <td>$110,000</td>
                     </tr>
