--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -110,11 +110,11 @@
                 <caption>Employee Information</caption>
                 <thead>
                     <tr>
-                        <th rowspan="2">Category</th>
-                        <th rowspan="2">Name</th>
-                        <th rowspan="2">Email</th>
-                        <th rowspan="2">Years of Service</th>
-                        <th rowspan="2">Monthly Salary</th>
+                        <th>Category</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Years of Service</th>
+                        <th>Monthly Salary</th>
                     </tr>
                 </thead>
                 <tbody>
