--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <title>Proud Cobra || ITIS-3135 || Homepage</title>
+    <title>Proud Cobra || ITIS-3135 || BYO Intro</title>
     <link rel="stylesheet" href="styles/default.css">
     <script src="scripts/survey.js" defer></script>
 </head>
