--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Forms || ITIS-3135 || Homepage</title>
+    <title>HTML Forms || ITIS-3135 || Forms</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
