--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <title>HTML Tables || ITIS-3135 || Homepage</title>
+    <title>HTML Tables || ITIS-3135 || Tables</title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
