BYO: Assignmetn requirements; Forms: Title

--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -17,11 +17,11 @@
             <table>
                 <tr>
                     <td><label for="name">Name:</label></td>
-                    <td><input type="text" id="name" name="name" placeholder="Your Name" required></td>
+                    <td><input type="text" id="name" name="name" placeholder="Proud Cobra" required></td>
                 </tr>
                 <tr>
                     <td><label for="mascot">Mascot:</label></td>
-                    <td><input type="text" id="mascot" name="mascot" placeholder="Your Mascot" required></td>
+                    <td><input type="text" id="mascot" name="mascot" placeholder="Proud Cobra" required></td>
                 </tr>
                 <tr>
                     <td><label for="image">Image (PNG or JPG):</label></td>
@@ -33,23 +33,23 @@
                 </tr>
                 <tr>
                     <td><label for="personalBackground">Personal Background:</label></td>
-                    <td><textarea id="personalBackground" name="personalBackground" placeholder="Your Personal Background" required></textarea></td>
+                    <td><textarea id="personalBackground" name="personalBackground" placeholder="Going to live that retired life" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="professionalBackground">Professional Background:</label></td>
-                    <td><textarea id="professionalBackground" name="professionalBackground" placeholder="Your Professional Background" required></textarea></td>
+                    <td><textarea id="professionalBackground" name="professionalBackground" placeholder="Star team member on a GameDev team" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="academicBackground">Academic Background:</label></td>
-                    <td><textarea id="academicBackground" name="academicBackground" placeholder="Your Academic Background" required></textarea></td>
+                    <td><textarea id="academicBackground" name="academicBackground" placeholder="Re-enrolled in college, last year; third time's the charm!" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="webDevBackground">Background in Web Development:</label></td>
-                    <td><textarea id="webDevBackground" name="webDevBackground" placeholder="Your Web Development Background" required></textarea></td>
+                    <td><textarea id="webDevBackground" name="webDevBackground" placeholder="Designed websites off and on, starting in the 90's'" required></textarea></td>
                 </tr>
                 <tr>
                     <td><label for="computerPlatform">Primary Computer Platform:</label></td>
-                    <td><input type="text" id="computerPlatform" name="computerPlatform" placeholder="Your Computer Platform" required></td>
+                    <td><input type="text" id="computerPlatform" name="computerPlatform" placeholder="Linux" required></td>
                 </tr>
                 <tr>
                     <td><label>Courses currently taking:</label></td>
