Forms: Assignment requirements update

--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -32,15 +32,15 @@
                 <p>Select the products you are interested in:</p>
                 <div>
                     <input type="checkbox" id="product1" name="product" value="Product 1">
-                    <label for="product1">Product 1</label>
+                    <label for="product1">Ore Tap</label>
                 </div>
                 <div>
                     <input type="checkbox" id="product2" name="product" value="Product 2">
-                    <label for="product2">Product 2</label>
+                    <label for="product2">Hide-and-Seek</label>
                 </div>
                 <div>
                     <input type="checkbox" id="product3" name="product" value="Product 3">
-                    <label for="product3">Product 3</label>
+                    <label for="product3">Ultra Mining</label>
                 </div>
             </fieldset>
 
