--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -14,8 +14,8 @@
         <h3>My Tabular Data</h3>
         <ol>
             <li>
-                <strong>Name:</strong> D.I. von Briesen<br>
-                <strong>Email:</strong> dvonbri1@uncc.edu<br>
+                <strong>Name:</strong>Pizza Pockets<br>
+                <strong>Email:</strong> this@that.blah<br>
                 <strong>Years of Service:</strong> 1
             </li>
             <li>
