--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -18,6 +18,7 @@
             overflow: hidden;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            padding-bottom: 50px; /* Add padding at the bottom */
         }
 
         .mySlides {
@@ -37,7 +38,7 @@
             font-size: 16px;
             padding: 10px 12px;
             position: absolute;
-            bottom: 0;
+            bottom: 50px; /* Adjust caption position */
             width: 100%;
             text-align: center;
             background-color: rgba(255, 255, 255, 0.7);
