--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -18,7 +18,6 @@
             overflow: hidden;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-            padding-bottom: 50px; /* Add padding at the bottom */
         }
 
         .mySlides {
@@ -38,7 +37,7 @@
             font-size: 16px;
             padding: 10px 12px;
             position: absolute;
-            bottom: 50px; /* Adjust caption position */
+            bottom: 0;
             width: 100%;
             text-align: center;
             background-color: rgba(255, 255, 255, 0.7);
@@ -131,6 +130,12 @@
         .full-screen:hover {
             background-color: #ddd;
         }
+        .controls-container {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+            margin-top: 20px; /* Add space above the controls */
+        }
 
     </style>
 </head>
@@ -179,15 +184,17 @@
                 <img src="images/slideshow/antennae.jpg" alt="A - Antennae">
                 <div class="caption">A - Antennae</div>
             </div>
-            <div class="controls">
-                <button id="beginning"><i class="fa fa-fast-backward"></i>Beginning</button>
-                <button id="backwards"><i class="fa fa-backward"></i>Back</button>
-                <button id="stop"><i class="fa fa-stop"></i>Stop</button>
-                <button id="start"><i class="fa fa-play"></i>Start</button>
-                <button id="forward">Forward<i class="fa fa-forward"></i></button>
-                <button id="end">End<i class="fa fa-fast-forward"></i></button>
-                <button id="fullscreen" class="full-screen"><i class="fa fa-arrows-alt"></i>Fullscreen</button>
-                <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
+            <div class="controls-container">
+                <div class="controls">
+                    <button id="beginning"><i class="fa fa-fast-backward"></i>Beginning</button>
+                    <button id="backwards"><i class="fa fa-backward"></i>Back</button>
+                    <button id="stop"><i class="fa fa-stop"></i>Stop</button>
+                    <button id="start"><i class="fa fa-play"></i>Start</button>
+                    <button id="forward">Forward<i class="fa fa-forward"></i></button>
+                    <button id="end">End<i class="fa fa-fast-forward"></i></button>
+                    <button id="fullscreen" class="full-screen"><i class="fa fa-arrows-alt"></i>Fullscreen</button>
+                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
+                </div>
             </div>
         </div>
 
