Slideshow: Adjusting controls

--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -7,137 +7,8 @@
     <meta name="description" content="Slideshow of images for Proud Cobra, for ITIS 3135">
     <link rel="stylesheet" href="styles/default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/slideshow.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <style>
-        /* CSS for the Slideshow */
-        .slideshow-container {
-            position: relative;
-            width: 60%;
-            margin: auto;
-            margin-top: 20px;
-            overflow: hidden;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-
-        .mySlides {
-            display: none;
-            width: 100%;
-            height: auto;
-        }
-
-        .mySlides img {
-            width: 100%;
-            height: auto;
-            vertical-align: middle;
-        }
-
-        .caption {
-            color: #333;
-            font-size: 16px;
-            padding: 10px 12px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            background-color: rgba(255, 255, 255, 0.7);
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
-        }
-
-        .slide-list {
-            list-style: none;
-            padding: 0;
-            margin: 20px auto;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 10px;
-            width: 60%;
-        }
-
-        .slide-list li {
-            cursor: pointer;
-            padding: 8px 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            transition: background-color 0.3s ease;
-            font-size: 14px;
-            white-space: nowrap;
-        }
-
-        .slide-list li:hover {
-            background-color: #ddd;
-        }
-
-        .active {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        /* New styles for controls */
-        .controls {
-            display: flex;
-            justify-content: center;
-            align-items: center; /* Vertically center items */
-            margin-top: 15px;
-            gap: 15px; /* Space between buttons */
-        }
-        .controls button {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-
-        .controls button:hover {
-            background-color: #ddd;
-        }
-
-        .controls button i { /* Style for the icons */
-            margin: 0 5px; /* Adjust spacing between icon and text, if any */
-        }
-
-        .thumbs-like {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-            margin-left: 20px;
-        }
-
-        .thumbs-like:hover {
-            background-color: #ddd;
-        }
-
-        .full-screen {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #f2f2f2;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s ease;
-        }
-
-        .full-screen:hover {
-            background-color: #ddd;
-        }
-        .controls-container {
-            display: flex;
-            justify-content: center;
-            width: 100%;
-            margin-top: 20px; /* Add space above the controls */
-        }
-
-    </style>
 </head>
 <body>
     <div data-include="components/header.html"></div>
@@ -213,104 +84,6 @@
     </main>
     <div data-include="components/footer.html"></div>
     <script src="scripts/include.min.js"></script>
-    <script>
-        // JavaScript for the Slideshow
-        let slideIndex = 0;
-        let slides = $(".mySlides");
-        let listItems = $(".slide-list li");
-        let intervalId; // To store the interval ID for auto-play
-
-        function showSlide(n) {
-            slides.hide();
-            listItems.removeClass("active");
-            if (n < 0) {
-                slideIndex = slides.length - 1;
-            } else if (n >= slides.length) {
-                slideIndex = 0;
-            }
-            slides.eq(slideIndex).show();
-            listItems.eq(slideIndex).addClass("active");
-        }
-
-        function currentSlide(n) {
-            showSlide(slideIndex = n);
-        }
-
-        // Initial display
-        showSlide(slideIndex);
-
-        // Event listener for the list items
-        listItems.on("click", function() {
-            let slideNumber = $(this).data("slide");
-            currentSlide(slideNumber);
-            stopAutoPlay(); // Stop auto-play when user clicks a list item
-        });
-
-        // Function for automatic slideshow
-        function autoPlay() {
-            intervalId = setInterval(() => {
-                slideIndex++;
-                showSlide(slideIndex);
-            }, 5000);
-        }
-
-        // Function to stop automatic slideshow
-        function stopAutoPlay() {
-            clearInterval(intervalId);
-        }
-
-        // Event listener for the start button
-        $("#start").on("click", function() {
-            autoPlay(); // Start auto-play
-        });
-
-        // Event listener for the stop button
-        $("#stop").on("click", function() {
-            stopAutoPlay(); // Stop auto-play
-        });
-
-        // Event listener for the forward button
-        $("#forward").on("click", function() {
-            slideIndex++;
-            showSlide(slideIndex);
-            stopAutoPlay();
-        });
-
-        // Event listener for the back button
-        $("#backwards").on("click", function() {
-            slideIndex--;
-            showSlide(slideIndex);
-            stopAutoPlay();
-        });
-
-        // Event listener for the beginning button
-        $("#beginning").on("click", function() {
-            showSlide(slideIndex = 0);
-            stopAutoPlay();
-        });
-
-        // Event listener for the end button
-        $("#end").on("click", function() {
-            showSlide(slideIndex = slides.length - 1);
-            stopAutoPlay();
-        });
-
-        // Event listener for fullscreen
-        $("#fullscreen").on("click", function() {
-            let container = $(".slideshow-container")[0];
-            if (container.requestFullscreen) {
-                container.requestFullscreen();
-            } else if (container.mozRequestFullScreen) { /* Firefox */
-                container.mozRequestFullScreen();
-            } else if (container.webkitRequestFullscreen) { /* Chrome, Safari and Opera */
-                container.webkitRequestFullscreen();
-            } else if (container.msRequestFullscreen) { /* IE/Edge */
-                container.msRequestFullscreen();
-            }
-        });
-
-        // Optional: Automatic slideshow (for demonstration purposes)
-        autoPlay(); // Start the slideshow automatically when the page loads
-    </script>
+    <script src="scripts/slideshow.js"></script>
 </body>
 </html>
