Slideshow: Adjusting controls

--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Slideshow of images for Proud Cobra, for ITIS 3135">
     <link rel="stylesheet" href="styles/default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles/slideshow.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
@@ -16,61 +15,49 @@
         <h2>Proud Cobra Slideshow</h2>
         <div class="slideshow-container">
             <div class="mySlides">
-                <img src="images/slideshow/pencil.jpg" alt="P - Pencil">
-                <div class="caption">P - Pencil</div>
+                <img src="images/pen.jpg" alt="P - Pen">
+                <div class="caption">P - Pen</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/router.jpg" alt="R - Router">
+                <img src="images/router.jpg" alt="R - Router">
                 <div class="caption">R - Router</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/outlet.jpg" alt="O - Outlet">
+                <img src="images/outlet.jpg" alt="O - Outlet">
                 <div class="caption">O - Outlet</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/usb.jpg" alt="U - USB">
+                <img src="images/usb.jpg" alt="U - USB">
                 <div class="caption">U - USB</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/door.jpg" alt="D - Door">
+                <img src="images/door.jpg" alt="D - Door">
                 <div class="caption">D - Door</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/coin.jpg" alt="C - Coin">
+                <img src="images/coin.jpg" alt="C - Coin">
                 <div class="caption">C - Coin</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/oil.jpg" alt="O - Oil">
+                <img src="images/oil.jpg" alt="O - Oil">
                 <div class="caption">O - Oil</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/book.jpg" alt="B - Book">
+                <img src="images/book.jpg" alt="B - Book">
                 <div class="caption">B - Book</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/rhyme.jpg" alt="R - Rhyme">
+                <img src="images/rhyme.jpg" alt="R - Rhyme">
                 <div class="caption">R - Rhyme</div>
             </div>
             <div class="mySlides">
-                <img src="images/slideshow/antennae.jpg" alt="A - Antennae">
+                <img src="images/antennae.jpg" alt="A - Antennae">
                 <div class="caption">A - Antennae</div>
-            </div>
-            <div class="controls-container">
-                <div class="controls">
-                    <button id="beginning"><i class="fa fa-fast-backward"></i>Beginning</button>
-                    <button id="backwards"><i class="fa fa-backward"></i>Back</button>
-                    <button id="stop"><i class="fa fa-stop"></i>Stop</button>
-                    <button id="start"><i class="fa fa-play"></i>Start</button>
-                    <button id="forward">Forward<i class="fa fa-forward"></i></button>
-                    <button id="end">End<i class="fa fa-fast-forward"></i></button>
-                    <button id="fullscreen" class="full-screen"><i class="fa fa-arrows-alt"></i>Fullscreen</button>
-                    <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
-                </div>
             </div>
         </div>
 
         <ul class="slide-list">
-            <li data-slide="0">P - Pencil</li>
+            <li data-slide="0">P - Pen</li>
             <li data-slide="1">R - Router</li>
             <li data-slide="2">O - Outlet</li>
             <li data-slide="3">U - USB</li>
