--- a/itis3135/slideshow.html
+++ b/itis3135/slideshow.html
@@ -17,42 +17,52 @@
             <div class="mySlides">
                 <img src="images/slideshow/pencil.jpg" alt="P - Pencil">
                 <div class="caption">P - Pencil</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/router.jpg" alt="R - Router">
                 <div class="caption">R - Router</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/outlet.jpg" alt="O - Outlet">
                 <div class="caption">O - Outlet</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/usb.jpg" alt="U - USB">
                 <div class="caption">U - USB</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/door.jpg" alt="D - Door">
                 <div class="caption">D - Door</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/coin.jpg" alt="C - Coin">
                 <div class="caption">C - Coin</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/oil.jpg" alt="O - Oil">
                 <div class="caption">O - Oil</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/book.jpg" alt="B - Book">
                 <div class="caption">B - Book</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/rhyme.jpg" alt="R - Rhyme">
                 <div class="caption">R - Rhyme</div>
+                <div class="timer-bar"></div>
             </div>
             <div class="mySlides">
                 <img src="images/slideshow/antennae.jpg" alt="A - Antennae">
                 <div class="caption">A - Antennae</div>
+                <div class="timer-bar"></div>
             </div>
         </div>
 
